@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.h,v $
-// Revision      : $Revision: 1.12 $
-// Revision date : $Date: 2004/12/14 20:39:44 $
+// Revision      : $Revision: 1.13 $
+// Revision date : $Date: 2004/12/15 17:35:42 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -174,6 +174,7 @@ public:
 	virtual void fetch (void);						// fetch headers (if any)
 	void read (gboolean value=true);				// mark/unmark mailbox as read
 	void lookup (void);								// try to guess mailbox format
+	static Mailbox *lookup_local(Mailbox *);            // try to guess mailbox format for a local mailbox
 	void parse (std::vector<std::string> &mail,		// parse a mail 
 				int status = -1);
 
